[package]
name = "post"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { version = "0.4.0", features = ["parallel"] }
ark-serialize = { version = "0.4.0" }
ark-ff = { version = "0.4.0", features = ["asm", "parallel"] }
ark-ec = { version = "0.4.0", features = ["parallel"] }
ark-poly = { version = "0.4.0", features = ["parallel"] }
ark-r1cs-std = { version = "0.4.0", features = ["parallel"] }
ark-bls12-381 = { version = "0.4.0" }
ark-ed-on-bls12-381 = { version = "0.4.0" }
ark-relations = { version = "0.4.0" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", features = ["parallel", "print-trace"] }
rand = { version = "^0.8.0" }
num = { version = "^0.4.0", features = ["rand", "serde"] }
num-prime = "0.4.1"
num-modular = "0.5.1"
rayon = "*"
digest = "0.10.6"
blake2 = "0.10.6"

[profile.test]
opt-level = 3