[package]
name = "blstrs"
description = "High performance implementation of BLS12 381"
version = "0.3.1"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/blstrs"
documentation = "https://docs.rs/blstrs"
categories = ["cryptography", "algorithms"]
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
blst = { version = "=0.3.3", default-features = true }
rand = "0.8"
rand_core = "0.6"
fff = { path = "../ff" }
groupy = { path = "../group" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand_xorshift = "0.3.0"
serde_json = "1.0.57"
hex = "0.4.2"

[features]
default = []
portable = ["blst/portable"]

