[package]
name = "fff"
version = "0.3.1"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Library for building and interfacing with finite fields"
readme = "README.md"
documentation = "https://docs.rs/ff/"
homepage = "https://github.com/filecoin-project/ff"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/ff"
edition = "2018"

[dependencies]
byteorder = "1"
fff_derive = { version = "0.3.0", path = "ff_derive", optional = true }
rand = "0.8"
lazy_static = "1.4.0"
serde = { version = "1.0", default-features = false }

[features]
default = []
derive = ["fff_derive"]

[badges]
maintenance = { status = "actively-developed" }

[target.'cfg(target_arch = "x86_64")'.build-dependencies]
cc = "1.0.50"
