[package]
name = "groupy"
version = "0.4.1"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
]
readme = "README.md"
license = "MIT/Apache-2.0"

description = "Elliptic curve group traits and utilities"
documentation = "https://docs.rs/groupy/"
homepage = "https://github.com/filecoin-project/group"
repository = "https://github.com/filecoin-project/group"
edition = "2018"

[dependencies]
fff = { path = "../ff" }
rand = "0.8"
rand_xorshift = "0.3"
thiserror = "1.0.10"
serde = { version = "1", default-features = false }

[badges]
maintenance = { status = "actively-developed" }
